# call-me-maybe

./: main.py  pyproject.toml  setup_env.sh
src/: __main__.py  test.py  utils.py
src/models/: func_calling.py  func_definition.py  json_model.py  options.py  prompt.py
